samples/_failures_safe/1761524447_cc0065_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdd44378.c: In function ‘main’:
./samples/SAFE/__tmp_bdd44378.c:172:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  172 |         struct compression_result res
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bdd44378.c:172:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdd44378.c:172:16: error: expected declaration or statement at end of input
